2007-04-07 15:21 -0700  Michael Elkins  <me@mutt.org>  (70e637e40943)

	* enter.c: add "|" to the list of shell chars

	* enter.c: "complete" function should consider shell chars to be word
	boundaries when doing filename completion (bug #2871)

	* complete.c, lib.c, lib.h: bug #2871

	Avoid altering the argument to mutt_complete() when completion
	fails. Previously, the trailing component of filename was removed
	each time the user pressed TAB.

2007-04-07 14:32 -0700  Fabian Groffen  <grobian@orakel.ods.org>  (eed43900f612)

	* copy.c: Fix some compiler warnings

2007-04-07 13:40 -0700  Brendan Cully  <brendan@kublai.com>  (980949218b09)

	* regex.c: Fix compiler warnings

	* smtp.c: Mark error message for translation

2007-04-06 18:03 -0700  Vincent Lefevre  <vincent@vinc17.org>  (1ab836e94c70)

	* po/fr.po: Updated French translation

2007-04-06 14:00 -0700  Brendan Cully  <brendan@kublai.com>  (cde224ad2662)

	* UPDATING: Update UPDATING

	* build-release: More build-release fixes

	* .hgsigs: mutt-1.5.15 signed

	* .hgtags: Added tag mutt-1-5-15-rel for changeset 4fd2d768fe5c

	* VERSION, po/bg.po, po/ca.po, po/cs.po, po/da.po, po/de.po,
	po/el.po, po/eo.po, po/es.po, po/et.po, po/eu.po, po/fr.po,
	po/ga.po, po/gl.po, po/hu.po, po/id.po, po/it.po, po/ja.po,
	po/ko.po, po/lt.po, po/nl.po, po/pl.po, po/pt_BR.po, po/ru.po,
	po/sk.po, po/sv.po, po/tr.po, po/uk.po, po/zh_CN.po, po/zh_TW.po:
	automatic post-release commit for mutt-1.5.15

	* build-release: More minor build tweaks

	* Makefile.am, build-release, mkchangelog.sh: Fix up release
	scripts for Hg

	* lib.c: safe_rename: fall back to rename on ENOSYS and EPERM as well
	as EXDEV. sshfs returns ENOSYS when attempting cross-directory
	links. vfat returns EPERM.

	* lib.c: Make safe_open with O_EXCL friendlier for NFS. Per #2707,
	when an open file is moved into a different directory over NFS, it
	may leave a .nfsXXX hardlink behind. This causes the rmdir in